--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>첫 타이틀</title>
+    <title>&lt;div&gt;블록과 &lt;span&gt;인라인</title>
   </head>
+
   <body>
-    페이지에 타이틀을 다는 예제입니다. 타이틀은 브라우저의 타이틀바에
-    보여집니다.
+    <h3>사랑</h3>
+    <hr />
+    <div style="background-color:skyblue;padding:20px;">
+      내가 사람의 방언과 천사의 말을 할지라도
+      <span style="color:red">사랑</span>이 없으면 소리 나는 구리와 울리는
+      꽹과리가 되고, <span style="color:red">사랑</span>이 없으면 아무것도
+      아니라.
+    </div>
+    <p>우리 서로 사랑하며 살아요</p>
   </body>
 </html>
