--- a/views/index.html
+++ b/views/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>표에 이미지 삽입</title>
+    <title>비디오 삽입</title>
   </head>
+
   <body>
-    <h3>표에 이미지 삽입</h3>
+    <h3>비디오 삽입</h3>
     <hr />
-    <table border="10">
-      <caption>
-        좋아하는 과일
-      </caption>
-      <tbod>
-        <tr>
-          <td><img src="./다운로드.jpg" /></td>
-          <td><img src="./286d5c769b544fd2bfa98b5270082339.jpg" /></td>
-          <td><img src="./286d5c769b544fd2bfa98b5270082339.jpg" /></td>
-        </tr>
-      </tbod>
-    </table>
+    <video
+      src="./GOMCAM 20181125_2116210765.mp4"
+      width="320"
+      height="240"
+      autoplay
+      loop
+    >
+      브라우저가 video 태그를 지원하지 않습니다.
+    </video>
   </body>
 </html>
