express 서버 구동 테스트

--- a/views/index.html
+++ b/views/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>비디오 삽입</title>
+    <meta charset="utf-8" />
+    <title>인라인 시맨틱 태그</title>
   </head>
-
   <body>
-    <h3>비디오 삽입</h3>
+    <h3>인라인 시맨틱 태그</h3>
     <hr />
-    <video
-      src="./GOMCAM 20181125_2116210765.mp4"
-      width="320"
-      height="240"
-      autoplay
-      loop
-    >
-      브라우저가 video 태그를 지원하지 않습니다.
-    </video>
+    <p>
+      내일 <mark>HTML5 시험</mark><br />
+      시간은 <time>09:00</time><br />
+      난이도 <meter value="0.8">80%</meter><br />
+      자료 업로딩(20%)<progress value="3" max="10"></progress><br />
+    </p>
   </body>
 </html>
