페이스북 passport로그인 1차 완료

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,6 +57,10 @@
         <a href="/signup" class="btn btn-default">
           <span class="fa fa-user"></span>회원가입
         </a>
+        <a href="/auth/facebook" class="btn btn-primary">
+          <span class="fa fa-facebook"></span>
+          페이스북 로그인
+        </a>
       </div>
     </div>
   </body>
