메인 페이지 로그인 버튼 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,20 +106,20 @@
         </a>
         <br />
         <a href="/auth/naver" class="naver btn">
-          네이버 로그인
+          네이버 계정으로 로그인
         </a>
         <br />
         <a href="/auth/kakao" class="kakao btn">
-          카카오 로그인
+          카카오 계정으로 로그인
         </a>
         <br />
         <a href="/auth/google" class="google btn">
           <span class="fa fa-google"></span>
-          구글 로그인
+          구글 계정으로 로그인
         </a>
         <br />
         <a href="/auth/facebook" class="fb btn">
-          페이스북 로그인
+          페이스북 계정으로 로그인
         </a>
         <br />
       </div>
