Fix posting permisson

--- a/views/listpost.ejs
+++ b/views/listpost.ejs
@@ -189,7 +189,7 @@
             </div>
             <br /><br />
             <a class="ui button" href="/process/listpost?page=<%= page %>&perPage=<%= perPage%>">재요청</a>
-            <a class="ui button" href="/public/addpost.html">글쓰기</a>
+            <a class="ui button" href="/process/addpost">글쓰기</a>
           </div>
         </div>
       </div>
