--- a/views/openpost.ejs
+++ b/views/openpost.ejs
@@ -151,7 +151,7 @@
             type="button"
             value="취소"
             name=""
-            onclick="javascript:histroy.back()"
+            onclick="javascript:window.history.back()"
           />
         </form>
       </div>
