--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,7 +105,7 @@
           <span class="fa fa-user"></span> 회원가입
         </a>
         <br />
-        <a href="/auth/naver" class="naver btn">
+        <!--<a href="/auth/naver" class="naver btn">
           네이버 계정으로 로그인
         </a>
         <br />
@@ -120,7 +120,7 @@
         <br />
         <a href="/auth/facebook" class="fb btn">
           페이스북 계정으로 로그인
-        </a>
+        </a>-->
         <br />
       </div>
     </div>
