--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -48,6 +48,12 @@
       <div class="page-header text-center">
         <h1><span class="fa fa-anchor"></span>사용자 프로필</h1>
         <a href="/logout" class="btn btn-default btn-sm">로그아웃</a>
+        <a href="/" class="btn btn-default btn-sm">홈으로</a>
+        <form method="post" action="/process/listpost">
+          <input type="hidden" name="page" value="0" />
+          <input type="hidden" name="perPage" value="2" />
+          <input type="submit" name="" value="게시판" />
+        </form>
       </div>
       <br />
       <div class="row">
