Delete Facebook login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -111,10 +111,10 @@
         구글 계정으로 로그인
       </a>
       <br />
-      <a href="/auth/facebook" class="fb socialbtn">
+      <!-- <a href="/auth/facebook" class="fb socialbtn">
         페이스북 계정으로 로그인
       </a>
-      <br />
+      <br /> -->
     </div>
   </div>
 </body>
