--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,7 @@
   <body>
     <div class="container">
       <div class="jumbotron text-center">
-        <h1><span></span>홈</h1>
+        <h1><span></span>안녕하세요</h1>
         <br />
         <p>로그인하세요.</p>
         <p>계정이 없으시면 회원가입하세요.</p>
