--- a/views/listpost.ejs
+++ b/views/listpost.ejs
@@ -188,7 +188,8 @@
               %>
             </div>
             <br /><br />
-            <a class="ui button" href="/process/listpost?page=<%= page %>&perPage=<%= perPage%>">재요청</a>
+            <a class="ui button" href="/profile">메인페이지</a>
+            <a class="ui button" href="/process/listpost?page=<%= page %>&perPage=<%= perPage%>">새로고침</a>
             <a class="ui button" href="/process/addpost">글쓰기</a>
           </div>
         </div>
