--- a/views/login.ejs
+++ b/views/login.ejs
@@ -95,7 +95,7 @@
         <button type="submit" class="btn btn-warning btn-lg">로그인</button>
         <span>계정이 없으세요? <a href="/signup">회원가입하기</a></span>
         <br><br>
-        <p><a href="/">홈으로</a></p>
+        <p><a href="/">뒤로가기</a></p>
         <hr />
       </form>
       <a href="/auth/naver" class="naver socialbtn">
