--- a/views/openpost.ejs
+++ b/views/openpost.ejs
@@ -1,170 +1,158 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width = device-width, height = device-height, initial-scale = 1"
-    />
-    <title>글 작성</title>
-    <link
-      href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../public/stylesheets/semantic.min.css" />
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
 
-    <script src="../public/javascripts/semantic.min.js"></script>
-    <link rel="stylesheet" href="../public/summernote/summernote.css" />
-    <script src="../public/summernote/summernote.js"></script>
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width = device-width, height = device-height, initial-scale = 1" />
+  <title>글 작성</title>
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../public/stylesheets/semantic.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
 
-      html {
-        width: 100%;
-        height: 100%;
-      }
+  <script src="../public/javascripts/semantic.min.js"></script>
+  <link rel="stylesheet" href="../public/summernote/summernote.css" />
+  <script src="../public/summernote/summernote.js"></script>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
 
-      body {
-        width: 100%;
-        height: 100%;
-        color: #000;
-        background-color: #fff;
-      }
+    html {
+      width: 100%;
+      height: 100%;
+    }
 
-      .container {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-flow: column wrap;
-        align-items: center;
-        /* justify-content: center; */
-        margin-top: 5em;
-      }
+    body {
+      width: 100%;
+      height: 100%;
+      color: #000;
+      background-color: #fff;
+    }
 
+    .container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-flow: column wrap;
+      align-items: center;
+      /* justify-content: center; */
+      margin-top: 5em;
+    }
+
+    #cardbox {
+      width: 70%;
+    }
+
+    #iconImage {
+      display: inline;
+    }
+
+    #titleText {
+      font-size: 1.4em;
+      font-weight: bold;
+      color: #777;
+    }
+
+    #contentsText {
+      color: #999;
+    }
+
+    #form1 {
+      padding: 1em;
+    }
+
+    .row {
+      height: 3em;
+    }
+
+    .col1 {
+      height: 3em;
+    }
+
+    .inputbox {
+      width: 20em;
+    }
+
+    #buttonContainer {
+      padding-top: 3em;
+      padding-right: 1em;
+      text-align: right;
+    }
+
+    @media screen and (min-width: 320px) and (max-width: 768px) {
       #cardbox {
-        width: 70%;
+        width: 90%;
       }
 
-      #iconImage {
-        display: inline;
+      label[id="contentsText"] {
+        display: none;
       }
+    }
 
-      #titleText {
-        font-size: 1.4em;
-        font-weight: bold;
-        color: #777;
+    @media screen and (min-width: 768px) and (max-width: 979px) {
+      #cardbox {
+        width: 80%;
       }
+    }
+  </style>
+</head>
 
-      #contentsText {
-        color: #999;
-      }
-
-      #form1 {
-        padding: 1em;
-      }
-
-      .row {
-        height: 3em;
-      }
-
-      .col1 {
-        height: 3em;
-      }
-
-      .inputbox {
-        width: 20em;
-      }
-
-      #buttonContainer {
-        padding-top: 3em;
-        padding-right: 1em;
-        text-align: right;
-      }
-
-      @media screen and (min-width: 320px) and (max-width: 768px) {
-        #cardbox {
-          width: 90%;
-        }
-
-        label[id="contentsText"] {
-          display: none;
-        }
-      }
-
-      @media screen and (min-width: 768px) and (max-width: 979px) {
-        #cardbox {
-          width: 80%;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div id="cardbox" class="ui blue fluid card">
-        <form class="content ui form" method="post" action="/process/addpost">
-          <h4 class="ui dividing header">글 쓰기 입력 항목</h4>
-          <div class="two fields">
-            <div class="field">
-              <label>제목</label>
-              <input type="text" name="title" placeholder="제목 입력" />
-            </div>
-            <div class="field"></div>
-          </div>
-
-          <div class="two fields">
-            <div class="field">
-              <label>작성자</label>
-              <input
-                type="text"
-                name="writer"
-                placeholder="작성자 아이디 입력"
-              />
-            </div>
-            <div class="field"></div>
-          </div>
-
+<body>
+  <div class="container">
+    <div id="cardbox" class="ui blue fluid card">
+      <form class="content ui form" method="post" action="/process/addpost">
+        <h4 class="ui dividing header">글 쓰기 입력 항목</h4>
+        <div class="two fields">
           <div class="field">
-            <label>내용</label>
-            <textarea
-              name="contents"
-              id="summernote"
-              cols="80"
-              rows="50"
-            ></textarea>
+            <label>제목</label>
+            <input type="text" name="title" placeholder="제목 입력" />
           </div>
+          <div class="field"></div>
+        </div>
 
-          <input
-            class="ui submit button"
-            type="submit"
-            value="추가"
-            ,
-            name=""
-          />
-          <input
-            class="ui button"
-            type="button"
-            value="취소"
-            name=""
-            onclick="javascript:window.history.back()"
-          />
-        </form>
-      </div>
+        <div class="two fields">
+          <div class="field">
+            <label>작성자</label>
+            <input type="text" name="writer" placeholder="작성자 아이디 입력" />
+          </div>
+          <div class="field"></div>
+        </div>
+
+        <div class="field">
+          <label>내용</label>
+          <textarea name="contents" id="summernote" cols="80" rows="50"></textarea>
+        </div>
+
+        <input class="ui submit button" type="submit" value="추가" , name="" />
+        <input class="ui button" type="button" value="취소" name="" onclick="javascript:window.history.back()" />
+      </form>
     </div>
-    <script>
-      $(document).ready(function() {
-        $("#summernote").summernote({
-          height: 300, // set editor height
-          minHeight: null, // set minimum height of editor
-          maxHeight: null, // set maximum height of editor
-          focus: true
-        });
+  </div>
+  <script>
+    $(document).ready(function () {
+      $("#summernote").summernote({
+        height: 300, // set editor height
+        minHeight: null, // set minimum height of editor
+        maxHeight: null, // set maximum height of editor
+        focus: true,
+        toolbar: [    // [groupName, [list of button]]
+          ['style', ['style']],
+          ['font', ['bold', 'italic', 'underline', 'clear']],
+          ['fontname', ['fontname']],
+          ['color', ['color']],
+          ['para', ['ul', 'ol', 'paragraph']],
+          ['height', ['height']],
+          ['table', ['table']],
+          ['insert', ['link', 'picture', 'hr']],
+          ['view', ['fullscreen', 'codeview']],
+          ['help', ['help']]
+        ]
       });
-    </script>
-  </body>
+    });
+  </script>
+</body>
+
 </html>
