--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html>
+<div>
+
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width = device-width, height = device-height, initial-scale = 1"
-    />
-    <title>로그인 화면</title>
-    <link
-      rel="stylesheet"
-      href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"
-    />
+    <meta name="viewport" content="width = device-width, height = device-height, initial-scale = 1" />
+    <title>Main</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />
     <!-- load bootstrap css -->
-    <link
-      rel="stylesheet"
-      href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
     <!-- load fontawesome -->
     <style>
       body {
@@ -28,11 +20,37 @@
         font-weight: 400;
         src: url("../public/font/NanumGothic-Regular.eot");
         src: local("NanumGothic"),
-          url("../public/font/NanumGothic-Regular.eot?#iefix")
-            format("embedded-opentype"),
+          url("../public/font/NanumGothic-Regular.eot?#iefix") format("embedded-opentype"),
           url("../public/font/NanumGothic-Regular.woff2") format("woff2"),
           url("../public/font/NanumGothic-Regular.woff") format("woff"),
           url("../public/font/NanumGothic-Regular.ttf") format("truetype");
+      }
+
+      .menu{
+        padding-top: 0px; 
+        padding-right: 0px; 
+        padding-left: 0px; 
+        margin-bottom: 10px;
+      }
+
+      .btn {
+        padding: 12px;
+        font-weight: bold;
+        border: none;
+        border-radius: 4px;
+        margin: 5px 0;
+        opacity: 0.85;
+        display: inline-block;
+        font-size: 17px;
+        line-height: 20px;
+        text-decoration: none;
+        /* remove underline from anchors */
+      }
+
+      .logout {
+        background-color: #ff6450;
+        color: #ffffff;
+        font-weight: bold;
       }
 
       h1,
@@ -46,21 +64,25 @@
   <body>
     <div class="container">
       <div class="page-header text-center">
-        <h1><span class="fa fa-anchor"></span>사용자 프로필</h1>
-        <a href="/logout" class="btn btn-default btn-sm">로그아웃</a>
-        <a href="/" class="btn btn-default btn-sm">홈으로</a>
-        <form method="post" action="/process/listpost">
-          <input type="hidden" name="page" value="0" />
-          <input type="hidden" name="perPage" value="2" />
-          <input type="submit" name="" value="게시판" />
-        </form>
+        <h1><span class="fa fa-anchor"></span> Sejin Board</h1>
+        <br>
+        <div class="jumbotron text-center menu" >
+          <form method="post" action="/process/listpost" style="float:left;">
+            <input type="hidden" name="page" value="0" />
+            <input type="hidden" name="perPage" value="2" />
+            <input type="submit" class="btn btn-default" name="" value="게시판" />
+          </form>
+          <a href="/public/amateurPirates.html" class="btn btn-default" style="float:left;">게임</a>
+          <a href="/logout" class="logout btn" style="float:right;">로그아웃</a>
+          <!-- <a href="/" class="btn btn-default btn-sm">홈으로</a> -->
+        </div>
       </div>
       <br />
       <div class="row">
         <div class="col-sm-6">
           <div class="well">
             <% if(user.provider == undefined || user.provider == '') { %>
-            <h3><span class="fa fa-user"></span>로컬 프로필 정보</h3>
+            <h3><span class="fa fa-user"></span>로그인 정보</h3>
             <br />
             <p>
               <strong>이메일</strong> : <%= user.email %><br /><br />
@@ -68,7 +90,7 @@
             </p>
             <% } else { %>
             <h3 class="text-primary">
-              <%= user.provider %> 프로필 정보
+              <%= user.provider %> 로그인 정보
             </h3>
             <br />
             <p>
@@ -81,4 +103,5 @@
       </div>
     </div>
   </body>
-</html>
+
+</div>
