--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -68,7 +68,7 @@
         </form>
         <hr />
         <p>이미 계정이 있으신가요?<a href="/login">로그인하기</a></p>
-        <p><a href="/">홈으로</a></p>
+        <p><a href="/">뒤로가기</a></p>
       </div>
     </div>
   </body>
