--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -47,7 +47,12 @@
         /* remove underline from anchors */
       }
 
-      .logout {
+      .logoutBtn {
+        float: right;
+        padding: 8px;
+        opacity: 0.85;
+        border: none;
+        border-radius: 4px;
         background-color: #ff6450;
         color: #ffffff;
         font-weight: bold;
@@ -56,6 +61,7 @@
       h1,
       p,
       a {
+        text-decoration: none;
         font-family: "Nanum Gothic";
       }
     </style>
@@ -73,8 +79,6 @@
             <input type="submit" class="btn btn-default" name="" value="게시판" />
           </form>
           <a href="/public/amateurPirates.html" class="btn btn-default" style="float:left;">게임</a>
-          <a href="/logout" class="logout btn" style="float:right;">로그아웃</a>
-          <!-- <a href="/" class="btn btn-default btn-sm">홈으로</a> -->
         </div>
       </div>
       <br />
@@ -82,16 +86,20 @@
         <div class="col-sm-6">
           <div class="well">
             <% if(user.provider == undefined || user.provider == '') { %>
-            <h3><span class="fa fa-user"></span>로그인 정보</h3>
+            <div>
+              <span class="fa fa-user"></span>로그인 정보
+              <a href="/logout" class="logoutBtn">로그아웃</a>
+            </div>
             <br />
             <p>
               <strong>이메일</strong> : <%= user.email %><br /><br />
               <strong>이름</strong> : <%= user.name %>
             </p>
             <% } else { %>
-            <h3 class="text-primary">
+            <div>
               <%= user.provider %> 로그인 정보
-            </h3>
+              <a href="/logout" class="logoutBtn">로그아웃</a>
+            </div>
             <br />
             <p>
               <strong>이메일</strong> : <%= user.email %><br /><br />
