Use bootstrap template

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta
+    <!-- <meta
       name="viewport"
       content="width = device-width, height = device-height, initial-scale = 1"
-    />
+    /> -->
     <title>홈 화면</title>
     <link
       rel="stylesheet"
@@ -18,9 +18,9 @@
     />
     <!-- load fontawesome -->
     <style>
-      body {
+      /* body {
         padding-top: 80px;
-      }
+      } */
 
       input,
       .btn {
@@ -62,13 +62,13 @@
       }
 
       /* Two-column layout */
-      .col {
+      /* .col {
         float: left;
         width: 50%;
         margin: auto;
         padding: 0 50px;
         margin-top: 6px;
-      }
+      } */
 
       @font-face {
         font-family: "Nanum Gothic";
