--- a/views/listpost.ejs
+++ b/views/listpost.ejs
@@ -1,104 +1,171 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width = device-width, height = device-height, initial-scale = 1"
-    />
-    <title>글 리스트</title>
-    
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
+<html lang="en">
 
-      html {
-        width: 100%;
-        height: 100%;
-      }
+<head>
 
-      body {
-        width: 100%;
-        height: 100%;
-        color: #000;
-        background-color: #fff;
-      }
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-      .container {
-        margin-right: auto;
-        margin-left: auto;
-        padding-left: 20px;
-        padding-right: 20px;
-      }
+  <title>게시판</title>
 
-      #page_button{
-        position: absolute; 
-        left: 50%; 
-        transform: translateX(-50%);
-      }
+  <!-- Bootstrap core CSS -->
+  <link href="/public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-      span {
-        color: #333;
-      }
+  <!-- Custom styles for this template -->
+  <!-- <link href="css/simple-sidebar.css" rel="stylesheet"> -->
+  <link href="/public/css/simple-sidebar.css" rel="stylesheet">
 
-      #board_title {
-        font-size: 1.2em;
-        font-weight: bold;
-        color: teal;
-      }
-      
-    </style>
-    <link rel="stylesheet" href="/public/semantic/out/semantic.min.css" />
-    <script src="/public/jquery-3.1.1.min.js"></script>
-    <script src="/public/semantic/out/semantic.min.js"></script>
-    
-    <script>
-      function listpost(page, perPage) {
-        document.location =
-          `/process/listpost?page=${page}&perPage=${perPage}`;
-      }
-    </script>
-  </head>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
 
-  <body>
-    <div class="container">
-      <br />
-      <div class="ui raised segment">
-        <a class="ui blue ribbon label">게시판</a>
-        <span id="board_title"><%= title %></span>
+    html {
+      width: 100%;
+      height: 100%;
+    }
+
+    body {
+      width: 100%;
+      height: 100%;
+      color: #000;
+      background-color: #fff;
+    }
+
+    .container {
+      margin-right: auto;
+      margin-left: auto;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
+    #page_button {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    span {
+      color: #333;
+    }
+
+    #board_title {
+      font-size: 1.2em;
+      font-weight: bold;
+      color: teal;
+    }
+  </style>
+  <link rel="stylesheet" href="/public/semantic/out/semantic.min.css" />
+  <script src="/public/jquery-3.1.1.min.js"></script>
+  <script src="/public/semantic/out/semantic.min.js"></script>
+
+  <script>
+    function listpost(page, perPage) {
+      document.location =
+        `/process/listpost?page=${page}&perPage=${perPage}`;
+    }
+  </script>
+
+</head>
+
+<body>
+
+  <div class="d-flex" id="wrapper">
+
+    <!-- Sidebar -->
+    <div class="bg-light border-right" id="sidebar-wrapper">
+      <div class="sidebar-heading">
+        <a href="/">Sejin Board </a>
+      </div>
+      <div class="list-group list-group-flush">
+        <form id="boardbtn" method="post" action="/process/listpost">
+          <input type="hidden" name="page" value="0" />
+          <input type="hidden" name="perPage" value="5" />
+          <a href="#" class="list-group-item list-group-item-action bg-light"
+            onclick="document.getElementById('boardbtn').submit();">게시판</a>
+        </form>
+        <a href="/public/amateurPirates.html" class="list-group-item list-group-item-action bg-light">게임</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Three.js 연습장</a>
+      </div>
+    </div>
+    <!-- /#sidebar-wrapper -->
+
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                계정
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <% if(!user) { %>
+                <a class="dropdown-item" href="/login">로그인</a>
+                <% } else { %>
+                <a class="dropdown-item" href="/logout">로그아웃</a>
+                <% } %>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="container">
+        <br />
+        <a class="ui blue label">게시판</a>
 
         <div class="ui blue fluid card">
           <div class="content">
             <div class="ui grid">
-              <div class="two wide column">번호</div>
-              <div class="eight wide column">제목</div>
-              <div class="two wide column">작성자</div>
-              <div class="two wide column">작성일</div>
-              <div class="two wide column">조회수</div>
+              <div class="two wide column"></div>
+              <div class="eight wide column"></div>
+              <div class="two wide column"></div>
+              <div class="two wide column"></div>
+              <div class="two wide column"></div>
             </div>
 
             <div class="ui very relaxed selection celled list">
               <% 
-              const noStart = (pageCount - page) * perPage; 
-              for(let i = 0; i < posts.length; i++){ 
-                  const curTitle = posts[i]._doc.title; 
-                  const curContents = posts[i]._doc.contents; 
-                  const curWriter = posts[i]._doc.writer.name; 
-                  const curNo = noStart - i; 
-                  const curviews = posts[i]._doc.views;
-                  const createdTime = moment(posts[i]._doc.created_at).format("MMM Do");
-              %>
+                      const noStart = (pageCount - page) * perPage; 
+                      for(let i = 0; i < posts.length; i++){ 
+                          const curTitle = posts[i]._doc.title; 
+                          const curContents = posts[i]._doc.contents; 
+                          const curWriter = posts[i]._doc.writer.name; 
+                          const curNo = noStart - i; 
+                          const curviews = posts[i]._doc.views;
+                          const createdTime = moment(posts[i]._doc.created_at).format("MMM Do");
+                      %>
               <div class="item">
                 <div class="ui grid">
                   <div class="two wide column"><%= curNo %></div>
                   <div class="eight wide column">
-                    <h4 class="ui left aligned header" onclick="javascript : window.location = '/process/showpost/<%= posts[i]._id%>'">
+                    <h4 class="ui left aligned header"
+                      onclick="javascript : window.location = '/process/showpost/<%= posts[i]._id%>'">
                       <%= curTitle %>
                     </h4>
-                  </div >
+                  </div>
                   <div class="two wide column">
                     <h5 class="ui left aligned orange header">
                       <%= curWriter%>
@@ -110,7 +177,7 @@
                     </h5>
                   </div>
                   <div class="two wide column">
-                      <%= curviews %>
+                    <%= curviews %>
                   </div>
                 </div>
               </div>
@@ -122,10 +189,7 @@
               <div class="ui icon button" onclick="listpost(0, <%= perPage %>)">
                 <i class="angle double left icon"></i>
               </div>
-              <div
-                class="ui icon button"
-                onclick="listpost(<%= (page - 1) %>, <%= perPage %>)"
-              >
+              <div class="ui icon button" onclick="listpost(<%= (page - 1) %>, <%= perPage %>)">
                 <i class="angle left icon"></i>
               </div>
               <% } else { %>
@@ -136,24 +200,22 @@
                 <i class="angle left icon"></i>
               </div>
 
-              <% } %> 
+              <% } %>
               <% 
-              const initial = Math.floor(page/10) * 10;
-              console.log(`initial : ${initial}`); 
-              let max = pageCount - initial; 
-              if(max > 10 ) { 
-                  max = initial + 10; 
-              } 
-              else { 
-                  max = initial + max; 
-              } 
-              console.log(`max : ${max}`); 
-              for(let i = initial; i < max; i++){ 
-                  if(i != page){ 
-              %>
-              <div
-                class="ui button"
-                onclick="listpost(<%= i %>, <%= perPage %>)">
+                      const initial = Math.floor(page/10) * 10;
+                      console.log(`initial : ${initial}`); 
+                      let max = pageCount - initial; 
+                      if(max > 10 ) { 
+                          max = initial + 10; 
+                      } 
+                      else { 
+                          max = initial + max; 
+                      } 
+                      console.log(`max : ${max}`); 
+                      for(let i = initial; i < max; i++){ 
+                          if(i != page){ 
+                      %>
+              <div class="ui button" onclick="listpost(<%= i %>, <%= perPage %>)">
                 <%= i %>
               </div>
               <% }else { %>
@@ -161,23 +223,19 @@
                 <%= i %>
               </div>
               <% } 
-              } 
-              %> 
+                      } 
+                      %>
               <% 
-              if((page+1) < pageCount) { 
-              %>
-              <div
-                class="ui icon button"
-                onclick="listpost(<%= (page+1) %>, <%= perPage %>)">
+                      if((page+1) < pageCount) { 
+                      %>
+              <div class="ui icon button" onclick="listpost(<%= (page+1) %>, <%= perPage %>)">
                 <i class="angle right icon"></i>
               </div>
-              <div
-                class="ui icon button"
-                onclick="listpost(<%= (pageCount - 1) %>, <%= perPage %>)">
+              <div class="ui icon button" onclick="listpost(<%= (pageCount - 1) %>, <%= perPage %>)">
                 <i class="angle double right icon"></i>
               </div>
               <% } 
-              else { %>
+                      else { %>
               <div class="ui disabled icon button">
                 <i class="angle right icon"></i>
               </div>
@@ -185,16 +243,35 @@
                 <i class="angle double right icon"></i>
               </div>
               <% 
-              } 
-              %>
+                      } 
+                      %>
             </div>
             <br /><br />
-            <a class="ui button" href="/profile">메인페이지</a>
             <a class="ui button" href="/process/listpost?page=<%= page %>&perPage=<%= perPage%>">새로고침</a>
             <a class="ui button" href="/process/addpost">글쓰기</a>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+  </div>
+  <!-- /#page-content-wrapper -->
+
+  </div>
+  <!-- /#wrapper -->
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="/public/vendor/jquery/jquery.min.js"></script>
+  <script src="/public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Menu Toggle Script -->
+  <script>
+    $("#menu-toggle").click(function (e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
+  </script>
+
+</body>
+
 </html>
