--- a/views/login.ejs
+++ b/views/login.ejs
@@ -99,7 +99,7 @@
         <hr />
       </form>
       <a href="/auth/naver" class="naver socialbtn">
-        네이버 계정으로 로그인
+        네이버 계정으로 로그인(테스트중)
       </a>
       <br />
       <a href="/auth/kakao" class="kakao socialbtn">
